--- a/practice/requirements.txt
+++ b/practice/requirements.txt
@@ -1,2 +1,8 @@
 chardet==4.0.0
+greenlet==1.1.2
+PyQt5==5.15.6
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.10.1
 PyYAML==6.0
+SQLAlchemy==1.4.35
+tabulate==0.8.9
